[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hurdat2py"
version = "0.4.0"
authors = [
  { name="Andy McKeen", email="andymckeen8648@gmail.com" },
]
description = "A custom HURDAT2 data parser."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "cartopy",
    "numpy",
	"pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
	"Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]